# -Archiver_project

./: .gitignore  Algorithm.cpp  Algorithm.h  Archive.cpp  ArchiveFile.cpp  ArchiveFile.hpp  ArchiveFileReader.cpp  ArchiveFileReader.hpp  ArchiveFileWriter.cpp  ArchiveFileWriter.hpp  Archiver.cpp  Archiver.hpp  CMakeLists.txt  ConsoleView.cpp  Dearchive.cpp  Decode.cpp  Encode.cpp  Event.h  GTest.cpp  Huffman.cpp  Huffman.h  IEventable.h  IGetFileSize.h  IInputStream.h  IOutputStream.h  IView.h  Input.cpp  Input.h  LZW.cpp  LZW.h  OutBitStream.cpp  OutBitStream.h  Output.cpp  Output.h  Presenter.cpp  Presentor.cpp  Presentor.h  README.md  Selection.cpp  Selection.h  (+11 more)
ArchiverQt/: Archive.cpp  ArchiveFileReader.cpp  ArchiveFileWriter.cpp  CMakeLists.txt  CreateView.qml  Dearchive.cpp  ErrorMessage.qml  FilesInArchive.qml  HomeView.qml  Huffman.cpp  LZW.cpp  ProjectButton.qml  ProjectMenuBar.qml  ProjectMenuBar.qml.autosave  QtView.cpp  QtView.h  README.md  Selection.cpp  ShowFiles.qml  ShowPath.qml  ShowView.qml  Styles.qml  SuccessMessage.qml  buff.cpp  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
ArchiverQt/lib_headers/: IInputStream.h  IOutputStream.h  TypeIdentifier.hpp  View.h
ArchiverQt/media/: test.tprk
TestCases/: ArchiveScreenTest  DearchiveScreenTest  UpdateTest
build-ArchiverQt-Desktop_Qt_5_13_2_clang_64bit-u041eu0442u043bu0430u0434u043au0430/: ArchiverQt  ArchiverQt.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
build-ArchiverQt-Desktop_Qt_5_13_2_clang_64bit-u041eu0442u043bu0430u0434u043au0430/ArchiverQt_autogen/EWIEGA46WW/: moc_QtView.cpp  qrc_qml.cpp
decoded_files/: text.txt
gtests/: TestArchiver.cpp  TestSelection.cpp
gtests/TestHuffman/: TestHuffman.cpp
gtests/TestLZW/: CMakeLists.txt  TestLZW.cpp
gtests/TestOutBitStream/: TestOutBitStream.cpp
gtests/TestSelection/: CMakeLists.txt  TestSelection.cpp
headers/: Archive.h  Dearchive.h  Decode.h  Encode.h  Event.h  IEventable.h  IHandler.h  ITestable.h  IView.h  Message.h  ModelResponse.h  Presenter.h  Presentor.h  Request.h  Show.h  TestSub.h  TestView.h  TypeCheck.h  View.h
lib/googlemock/scripts/: fuse_gmock_files.py  gmock-config.in  upload.py
lib/googlemock/test/: gmock-spec-builders_test.cc
lib/googletest/include/gtest/internal/: gtest-port.h
lib/googletest/scripts/: fuse_gtest_files.py  gtest-config.in  upload.py
lib/googletest/test/: googletest-output-test.py
lib_headers/: Algorithm.h  Archive.h  ArchiveFile.hpp  ArchiveFileReader.hpp  Archiver.hpp  ConsoleView.h  Dearchive.h  IHandler.h  IOutputStream.h  Input.h  Message.h  ModelResponse.h  Output.h  Presenter.h  Request.h  Selection.h  Show.h  TypeIdentifier.hpp  View.h
media/: test.tprk  test10.tprk  test11.tprk  test2.tprk  test3.tprk  test4.tprk  test5.tprk  test7.tprk  test8.tprk  test_archive.tprk  test_fullfilename.tprk
tests/TestHuffman/: TestHuffman.cpp
tests/TestLZW/: TestLZW.cpp
tests/TestSelection/: TestSelection.cpp
